test/netlist/error/invalid-pipe-arity.bop
C(e, f) = out
where
  out = and(e, external[2]("./external.exe", f));
end where;
